2008-12-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m: Remove left over traces of toolbar handling.
	* Headers/AppKit/NSWindow+Toolbar.h: Move some private methods
	from here ...
	* Source/NSWindow+Toolbar.m: ... to here.
	* Source/NSToolbarItem.m,
	* Source/GSToolbar.m,
	* Source/NSToolbar.m: White space clean up.

2008-12-28 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSClipView.m: removed C99-ism

2008-12-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: Add tiny bit of diagnostic logging for
	locating backend bundle.

2008-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m (-initWithData:...,
	-initWithURL:...): Basic implementation.
	* Source/NSAttributedString.m
	(NSMutableAttributedString-readFromData:...): Implement. 

2008-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocumentController.m: Remove now unused override helper
	method. 
	* Headers/AppKit/NSDocument.h: Change to use NSUInteger and
	NSInteger. Add new 10.5 method
	* Source/NSDocument.m: Implement all Cocoa methods of this class
	and clean up the rest of the implementation. 
	
2008-12-25 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSMenuItem.h: Declare to implement interface
	NSValidatedUserInterfaceItem. 
	* Headers/AppKit/NSDocumentController.h: Change to use NSUInteger and
	NSInteger. 
	* Source/NSDocumentController.m: Implement all Cocoa methods of this
	class and clean up the rest of the implementation.
	Partly using code by Nikolaus Schaller <hns@computer.org>.

2008-12-21  Adam Fedor  <fedor@gnu.org>

	* Version 0.16.0

2008-12-21  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-draggingUpdated:): Avoid redundant call to
	-scrollPoint: when scrolling diagonally.
	* Source/NSTextView.m: Fix inconsistent naming of (private)
	NSTextStorage category.

	* Source/NSTextView_actions.m (-centerSelectionInVisibleArea):
	Replace the provisional implementation by a correct one.
