@@ -100,6 +100,18 @@
 	  begin with a dot ('.') are not shown in the NSSavePanel or
 	  NSOpenPanel.
 	  </p>
+	  <term>GSHelpViewer</term>
+	  <desc>
+          <p>
+	  A string which can be used to specify the name of the application
+	  to be used to view application help.<br />  If this is not specified
+	  (or is an empty string) the 'best' available viewer is used (an
+	  application whose Info.plist says that it can view files of the
+	  appropriate type ... usually rtp or rtfd files).<br />
+	  If this is set to <code>NSHelpPanel</code> or if no application can
+	  be used to view the help file, the help is displayed by the
+	  shared help panel object built in to the application.
+	  </p>
 	  </desc>
 	  <term>GSInsertControlKeystrokes</term>
 	  <desc>
